tests/surveytypo.out

Removing trailing traverses...

Concatenating traverses...

Simplifying network...
./surveytypo.svx:15: error: Reference to station "gos.1" from non-existent survey "gos"
./surveytypo.svx:15: warning: Station "gos.1" referred to just once, with an explicit survey name - typo?
cavern: error: Survey not all connected to fixed stations
The following survey stations are not attached to a fixed point:
./surveytypo.svx:10: info: cave.001
